# reader

./: .gitignore  LICENSE  Makefile  README.md  dune-project
UI/: package.json
UI/public/: index.html
UI/src/: App.tsx  constants.ts
UI/src/api/: user.ts
UI/src/components/: Add.tsx  Icon.tsx  View.tsx  (+2 more)
lib/: discover.ml  dune  rss.ml  scraper.ml  server.ml  xml.ml
lib/model/: feed.ml  ring.ml  source.ml
server/: Makefile  dune-project  reader.opam
server/src/database/: boardEntries.ml  boards.ml  connect.ml  dune  feedListEntries.ml  feedLists.ml  feeds.ml  items.ml  userFeeds.ml  userItems.ml  users.ml  util.ml
server/src/job/: dune  feedPruner.ml  itemPruner.ml  puller.ml
server/src/magic/: dune  magic.ml  magicList.ml  magicLwt.ml  magicOption.ml
server/src/model/: board.ml  boardEntry.ml  dune  error.ml  feed.ml  feedList.ml  feedListEntry.ml  item.ml  user.ml  userFeed.ml  userItem.ml
server/src/server/: boards.ml  cors.ml  dune  feeds.ml  lists.ml  request.ml  response.ml  server.ml  userFeeds.ml  userItems.ml  users.ml  util.ml
server/src/source/: discover.ml  dune  rss.ml  xml.ml
server/test/: dune
src/database/: connect.ml  dune  error.ml  feeds.ml  feeds.mli  items.ml  items.mli  users.ml  users.mli
src/model/: codec.ml  dune  feed.ml  ring.ml  source.ml  user.ml  util.ml
src/server/: dune  feeds.ml  request.ml  response.ml  server.ml  users.ml  util.ml
src/source/: discover.ml  dune  rss.ml  scraper.ml
ui/: Makefile  package.json  tsconfig.json
ui/config/: webpack.config.js
ui/src/: App.tsx  constants.ts  global-styles.ts
(+30 files in other folders)
