(lang dune 2.9)
(name reader)

(generate_opam_files true)

(package
 (name reader)
 (depends
   (cohttp-lwt-unix (>= 4.0.0))
   (cohttp-async (>= 4.0.0))
   (yojson (>= 1.7.0))
   (ppx_deriving_yojson (>= 3.6.1))
   (uuidm (>= 0.9.7))
   (safepass (>= 3.1))
   (jose (>= 0.6.0))
   (caqti (>= 1.9.0))
   (caqti-lwt (>= 1.9.0))
   (caqti-driver-sqlite3 (>= 1.9.0))
   (ppx_rapper_lwt (>= 3.1.0))
   (lwt_ppx (>= 2.1.0))
   (markup (>= 1.0.3))
   (dream (>= 1.0.0~alpha4))))
